--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-# Site settings
+title: Steve Rydz
+url: https://steverydz.com
 permalink: /:year/:month/:day/:title
-
-# Sass settings
 sass:
   sass_dir: _scss
   style: compressed
+plugins:
+  - jekyll-feed
